k8s/apps/auth/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinyauth
  namespace: auth
spec:
  selector:
    app: tinyauth
  ports:
    - name: tinyauth-port
      port: 3000
